--- a/src/globals/_colors.scss
+++ b/src/globals/_colors.scss
@@ -1,5 +1,6 @@
 $colors: (
   primary: (
+    800: hsla(0, 0%, 0%, 0.349),
     700: hsl(236, 33%, 9%),
     600: hsl(0, 0%, 22%),
     500: hsl(236, 33%, 28%),
