--- a/src/globals/_colors.scss
+++ b/src/globals/_colors.scss
@@ -5,25 +5,38 @@ $colors: (
     600: hsl(0, 0%, 22%),
     500: hsl(236, 33%, 28%),
     400: hsl(182, 73%, 63%),
+    300: hsla(182, 73%, 63%, 0.062),
     200: hsl(0, 0%, 100%),
     100: hsla(0, 0%, 100%, 0.686),
   ),
 
   secondary: (
-    500: radial-gradient(
+    300: radial-gradient(
       circle, 
-      hsl(182, 74%, 93%) 0%, 
+      hsl(182, 74%, 93%) 0%,
       hsl(188, 62%, 51%) 50%),
-  
+
+    400: linear-gradient(
+      155deg,
+      hsl(182, 74%, 93%) 0%,  
+      hsl(188, 80%, 60%) 50%),
+
     600: linear-gradient(
-      125.17deg, 
-      hsl(0, 0%, 15%) 0%, 
-      hsl(245, 29%, 9%) 100%),
+      153.47deg,
+      hsl(0, 0%, 100%) -341.94%,
+      hsl(258, 29%, 9%) 95.11%),
+
 
     700: linear-gradient(
+      125.17deg,  
+      hsl(0, 0%, 15%) 0%,
+      hsl(245, 29%, 9%)
+      100%),
+
+    800: linear-gradient(
       153.47deg,
       hsla(0, 0%, 100%, 0) -341.94%,
       hsl(258, 29%, 9%) 95.11%
-    ),
+      ),
   ),
 );
