--- a/src/components/styles/call_to_action.scss
+++ b/src/components/styles/call_to_action.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: min(1.5rem, 3vh);
+    gap: 1.5rem;
     line-height: 1.75;
     width: 80%;
 
