--- a/src/containers/styles/business.scss
+++ b/src/containers/styles/business.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     width: min(70rem, 90%);
-    margin: 5rem auto;
+    margin: 10vw auto;
     gap: min(1.5rem,10%);
 
     &__feature{
