--- a/src/containers/styles/hero.scss
+++ b/src/containers/styles/hero.scss
@@ -43,6 +43,7 @@
         & span{
             background-image: var(--clr-secondary-400);
             background-clip: text;
+            -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
     }
