--- a/src/globals/_colors.scss
+++ b/src/globals/_colors.scss
@@ -1,9 +1,10 @@
 $colors: (
   primary: (
+    900: hsla(0, 2%, 10%, 0.815),
     800: hsla(0, 0%, 0%, 0.349),
     700: hsl(236, 33%, 9%),
     600: hsl(0, 0%, 22%),
-    500: hsl(236, 33%, 28%),
+    500: hsl(255, 6%, 14%),
     400: hsl(182, 73%, 63%),
     300: hsla(182, 73%, 63%, 0.062),
     200: hsl(0, 0%, 100%),
