--- a/src/containers/styles/business.scss
+++ b/src/containers/styles/business.scss
@@ -1,14 +1,16 @@
-@use "../../globals/mixins" as *;
+.business {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: min(70rem, 90%);
+  margin: 10vh auto;
+  gap: min(1.5rem, 10%);
 
-.business{
+  &__content {
+    width: 80%;
+  }
+
+  &__feature {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    width: min(70rem, 90%);
-    margin: 10vw auto;
-    gap: min(1.5rem,10%);
-
-    &__feature{
-        display: grid;
-        gap: 0.75rem;
-    }
+    gap: 0.75rem;
+  }
 }
